--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required(VERSION 3.12) # Cmake must be on version 3.12 or above to proceed.
-project(libpacset VERSION 0.0.4) # Start the project.
+project(libpacset VERSION 0.0.5) # Start the project.
 
 set(CMAKE_C_STANDARD 99) # C99 is required.
 set(CMAKE_C_STANDARD_REQUIRED ON)
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
 
 FILE(GLOB SOURCES src/*.c) # Get all the files from the src directory.
 
