--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.18)
-project(pacset VERSION 1.4.0 LANGUAGES C)
+project(pacset VERSION 1.4.1 LANGUAGES C)
 
 # Set up specifications for the C compiler.
 set(CMAKE_C_STANDARD 99)
@@ -12,8 +12,8 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 # Gather the files.
 FILE(GLOB SOURCES src/*.c)
-include_directories(${CMAKE_SOURCE_DIR}/headers)
 
 # Output the project.
 add_library(pacset SHARED ${SOURCES})
+target_include_directories(pacset PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/headers)
 install(TARGETS pacset DESTINATION lib)
