Things are coming together now.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.18)
-project(pacset VERSION 2.0.0 LANGUAGES C)
+project(pacset VERSION 2.1.0 LANGUAGES C)
 
 # Set up specifications for the C compiler.
 set(CMAKE_C_STANDARD 99)
@@ -19,6 +19,7 @@ FILE(GLOB SOURCES
 	${CMAKE_CURRENT_SOURCE_DIR}/src/pacprint.c
 	${CMAKE_CURRENT_SOURCE_DIR}/src/pacrom.c
 	${CMAKE_CURRENT_SOURCE_DIR}/src/pacset.c
+	${CMAKE_CURRENT_SOURCE_DIR}/src/paclimits.c
 )
 
 # Output the library.
