Polished the repository.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.18)
-project(pacio VERSION 3.0.0 LANGUAGES C)
+project(pacio VERSION 3.1.0 LANGUAGES C)
+project(pacio_test LANGUAGES C)
 
 # Set up specifications for the C compiler.
 set(CMAKE_C_STANDARD 99)
@@ -18,7 +19,7 @@ FILE(GLOB TEST_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/test/*.c)
 add_library(pacio SHARED ${MAIN_FILES})
 target_include_directories(pacio PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 install(
-	DIRECTORY include/libpacio/
+	DIRECTORY include/main
 	DESTINATION /usr/local/include/libpacio
 	FILES_MATCHING PATTERN "*.h"
 	PATTERN ".git" EXCLUDE
@@ -28,5 +29,6 @@ install(TARGETS pacio DESTINATION lib)
 
 # Output the test executable.
 add_executable(pacio_test ${TEST_FILES})
+target_include_directories(pacio_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_link_libraries(pacio_test PRIVATE pacio)
 install(TARGETS pacio_test DESTINATION bin)
