Added master and shortcut headers.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.18)
-project(pacio VERSION 3.1.1 LANGUAGES C)
+project(pacio VERSION 3.2.0 LANGUAGES C)
 project(pacio_test LANGUAGES C)
 
 # Set up specifications for the C compiler.
@@ -19,16 +19,19 @@ FILE(GLOB TEST_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/test/*.c)
 add_library(pacio SHARED ${MAIN_FILES})
 target_include_directories(pacio PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 install(
-	DIRECTORY include/libpacio
-	DESTINATION /usr/local/include/libpacio
-	FILES_MATCHING PATTERN "*.h"
-	PATTERN ".git" EXCLUDE
-	PATTERN ".DS_Store" EXCLUDE
+	DIRECTORY include/				# Get everything from the include directory in the library...
+	DESTINATION include				# ...and put them to the system's local include directory.
+	FILES_MATCHING
+	PATTERN "*.h"					# Look for headers in the library.
+	PATTERN ".git" EXCLUDE			# Ignore .git files.
+	PATTERN ".DS_Store" EXCLUDE		# Ignore the annoying .DS_Store files.
+	PATTERN ".swp" EXCLUDE			# Also ignore the annoying .swp files.
+	PATTERN "test" EXCLUDE			# We don't need to include the test directory.
 )
 install(TARGETS pacio DESTINATION lib)
 
 # Output the test executable.
 add_executable(pacio_test ${TEST_FILES})
-target_include_directories(pacio_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_include_directories(pacio_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/test)
 target_link_libraries(pacio_test PRIVATE pacio)
 install(TARGETS pacio_test DESTINATION bin)
